# solarstorm_scout

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  STATUS.md  docker-compose.oneshot.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: README.md  ci-tests.yml  codeql-analysis.yml  dependency-review.yml  dependency-scan.yml  docker-build-publish.yml  snyk-security.yml
scripts/: install-solarstorm.sh  uninstall-solarstorm.sh
solarstorm_scout/: __init__.py  chart_renderer.py  config.py  demo.py  formatter.py  main.py  social.py  spaceweather.py
systemd/: solarstorm-scout.service.template  solarstorm-scout.timer.template
